lab1/Test/L1-A-11-99.cmm
int eK45Pmx1vcClO ( float UlC61J4SW929fXR [ 1386388305 
  ] ) {
  if ( J9_pfnqi4SRSr7hanf )   while ( mv6t15qsby ) 
      TGOoUpEqCLlon = FwH || eOK && fBvSJlsYh1Zs == QgvW 
    + UdfnP * ! ( dyCrWuLLh != U3a - WkvMfE / - ! qXaO5NCjIOQkO9WwMwo 
    ( Sfn4Fxz1o , QkektSGxT7ftjps || RS4fXn [ UzXNZUK0u 
    < Ub58htMVav_Of8bzZS [ Xl && dvxNT > ATBQP ( zk1RSdgfNZLK1VP2o 
    || F2iF0HU9 <= ! EdbAI0ATb4 ( - QudsTs_dCHgiu_5 [ 
    PqKxkScTZUYE5koRH || x0XFu2aDNnWR4u && pk + k * - 
    ! YBrdnzBK8mOy ( WB_aFTZOa3bMrjv + EhqGdpUZL * kfH 
    * - 1640210497 ) ] ) ) * 1970532524.1322014481 ] . 
    wGz ] . Gz8vkVWR5psPvPZPzbKb >= uVNAp ( ) ) ) ;


}
struct {
  int JflzCfB 
  int Nm ;
  struct yPQFGuO7 ulKuqerP85 , a0OvDxi6fx1i6RA2J = 
    o4uS ;
};
>= struct GRAXFx2FeCuPDGR1EB SB8WpUauojYhQ 
;
! int U9 , In5NIvHTx9kiiOu1k0 

;
int ;
int mRfeXn ( ) {
}
struct jSPv2hoHKX89n2Egh {
};
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int oXcn ( int FCzupihNBP3UaYH , int v5_WThc_IcN2 
  ) {
||   if ( OhrSKxw3 ) {
    if ( pRZj9dkoqkCrxDApDyI )     oVox9c58L ;
else     if ( wz1mMztqJT2 )     uvlwe ;


    while ( CPi1XSycp5uFcmiu )     oKuNsonmRHk ;

  }else   return UfCRvomOgxdvoG ;

}
